// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button/Base Large 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <button
    className="sc-AxjAm htgDOH"
    onClick={[Function]}
    size={7}
  >
    click me
  </button>
</div>
`;

exports[`Storyshots Button/Base Medium 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <button
    className="sc-AxjAm chWfkF"
    onClick={[Function]}
    size={5}
  >
    click me
  </button>
</div>
`;

exports[`Storyshots Button/Base Small 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <button
    className="sc-AxjAm YXHCs"
    onClick={[Function]}
    size={3}
  >
    click me
  </button>
</div>
`;

exports[`Storyshots Button/Search Large 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <button
    className="sc-AxjAm htgDOH sc-AxirZ knANer"
    onClick={[Function]}
    size={7}
  >
    click me
  </button>
</div>
`;

exports[`Storyshots Button/Search Medium 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <button
    className="sc-AxjAm chWfkF sc-AxirZ knANer"
    onClick={[Function]}
    size={5}
  >
    click me
  </button>
</div>
`;

exports[`Storyshots Button/Search Small 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <button
    className="sc-AxjAm YXHCs sc-AxirZ knANer"
    onClick={[Function]}
    size={3}
  >
    click me
  </button>
</div>
`;
